tests/positive/rule4_optional.safe
-- Test: rule4_optional
-- Description: Optional value access with null check before dereference.
--   The access value is checked for null before any dereference,
--   so the dereference is proven safe.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Expected: ACCEPT

package Safe_Optional

   type Value is range 0 to 10_000;
   type Value_Ptr is access Value;

   --  Get_Or_Default: returns the designated value if non-null,
   --  otherwise returns a default.
   function Get_Or_Default (P : Value_Ptr;
                            Default : Value) returns Value

      if P != null
         --  P is provably not null by the guard.
         return P.all;
      else
         return Default;



   --  Has_Value: checks if the pointer is non-null.
   function Has_Value (P : Value_Ptr) returns Boolean

      return P != null;



