tests/negative/neg_rule4_maybe_null.safe
-- Test: neg_rule4_maybe_null
-- Description: Dereference after a conditional that does not cover all paths.
--   On one branch the pointer is assigned, on the other it remains null.
--   The dereference after the conditional is not provably safe.
-- Clause: SAFE@4aecf21:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Expected: REJECT null_dereference

package Maybe_Null_Test is

   type Value is range 0 .. 100;
   type Value_Ptr is access Value;

   --  Conditional_Deref: only assigns P on one branch.
   --  After the if, P may still be null.
   function Conditional_Deref (Flag : Boolean) return Value is
      P : Value_Ptr = null;
   begin
      if Flag then
         P = new (50 as Value);
      end if;
      --  If Flag was False, P is still null.
      return P.all;  -- ERROR: P may be null when Flag = False
   end Conditional_Deref;

end Maybe_Null_Test;
